@@ -1,3 +1,7 @@
+2011-06-02	Sergey S. Sergeev
+
+	* main/Crypto/Base62Utils.class.php: assert check in decode() added.
+
 2011-06-01	Sergey S. Sergeev
 
 	* main/Crypto/Base62Utils.class.php: Base62 encode/decode implemented.
